# StrataDL

./: .gitignore  LICENCE  LICENSE  README.md  TODO.md  main.py  pyproject.toml  tips.md
.github/workflows/: test.yml
notebooks/: base-vectorielle.ipynb  convert-docx-to-md.ipynb  llm-ollama.ipynb  scraper.ipynb
package/: pyproject.toml
src/stratadl/cli/: README.md  main.py
src/stratadl/core/embedding/: base.py  factory.py  huggingface.py  sentence_transformer.py
src/stratadl/core/ingestion/: scraper.py
src/stratadl/core/ingestion/file/: base.py  word.py
src/stratadl/core/provider/: base.py  factory.py  ollama.py  stream.py
src/stratadl/core/vectorstore/: base.py  chroma.py  factory.py
tests/: conftest.py  test_cli.py  test_embedding_base.py  test_embedding_factory.py  test_embedding_huggingface.py  test_embedding_sentence_transformer.py  test_ingestion_file_base.py  test_ingestion_file_word.py  test_provider_base.py  test_provider_factory.py  test_provider_ollama.py  test_provider_stream.py  test_scraper.py  test_vectorestore.py
