[project]
name = "stratadl"
version = "0.0.6"
authors = [
  { name="THULLIEZ Jérémy", email="j.thulliez@gmail.com" },
]
description = "Framework pour accélérer les projets d'IA en entreprise."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.2.1",
    "mammoth>=1.11.0",
    "markdownify>=1.2.0",
    "numpy>=2.3.4",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "typer>=0.19.2",
]

[project.urls]
Homepage = "https://github.com/JeremZed/StrataDL"
Issues = "https://github.com/JeremZed/StrataDL/issues"

[project.scripts]
stratadl = "stratadl.cli.main:app"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock"]
