[project]
name = "stratadl"
version = "0.0.1"
authors = [
  { name="THULLIEZ Jérémy", email="j.thulliez@gmail.com" },
]
description = "Framework pour accélérer les projets d'IA en entreprise."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "typer>=0.19.2"
]

[project.urls]
Homepage = "https://github.com/JeremZed/StrataDL"
Issues = "https://github.com/JeremZed/StrataDL/issues"

[project.scripts]
stratadl = "stratadl.cli.main:app"